feat: implement feature to analyze file with openAi Api and save result in s3 bucket